--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unit-plugin",
+  "name": "yaya-plugin",
   "version": "1.0.0",
   "author": "Lycofuture",
   "description": "Bot Plugin",
