--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         id: release
         with:
           release-type: node
-          package-name: yaya
+          package-name: yaya-plugin
       # Checkout
       - uses: actions/checkout@v3
         if: ${{ steps.release.outputs.release_created }}
