--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,19 @@
-name: Release and Publish
 on:
   push:
     branches:
       - main
+
 permissions:
   contents: write
   pull-requests: write
+
+name: release-please
+
 jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v3
-        id: release
         with:
           release-type: node
           package-name: yaya-plugin
-      # Checkout
-      - uses: actions/checkout@v3
-        if: ${{ steps.release.outputs.release_created }}
-      # Setup node
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          registry-url: 'https://registry.npmjs.org'
-        if: ${{ steps.release.outputs.release_created }}
