--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,3 +17,12 @@ jobs:
         with:
           release-type: node
           package-name: ${{ steps.package.outputs.name }}
+          changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"perf","section":"Performance Improvements","hidden":false}]'
+          bump-minor-pre-major: true
+          default-branch: ${{ inputs.default-branch }}
+          prerelease: ${{ inputs.prerelease }}
+      - run: npm publish --tag ${{ inputs.npm-dist-tag }} --access public
+        env:
+         NODE_AUTH_TOKEN: ${{ inputs.npm-token }}
+         if: ${{ steps.release.outputs.release_created }}
+         shell: bash
