--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           token: ${{secrets.nve_TOKEN}}
           release-type: node
+          version-file: package.json
+          tag-separator: true
+          group-pull-request-title-pattern: true
           package-name: ${{ steps.package.outputs.name }}
           changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"chore","section":"Miscellaneous","hidden":false}]'
       - name: Upload Release Artifact
