--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,6 +18,7 @@ jobs:
           token: ${{secrets.nve_TOKEN}}
           release-type: node
           version-file: package.json
+          command: release-please
           tag-separator: true
           group-pull-request-title-pattern: true
           package-name: ${{ steps.package.outputs.name }}
