--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,12 +17,12 @@ jobs:
         with:
           token: ${{secrets.nve_TOKEN}}
           release-type: node
-          version-file: package.json
+          #version-file: package.json
           command: release-please
-          tag-separator: true
-          group-pull-request-title-pattern: true
+          #tag-separator: true
+          # group-pull-request-title-pattern: true
           package-name: ${{ steps.package.outputs.name }}
-          changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"chore","section":"Miscellaneous","hidden":false}]'
+         # changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"chore","section":"Miscellaneous","hidden":false}]'
       - name: Upload Release Artifact
         if: ${{ steps.release.outputs.release_created }}
         env:
