first commit Update openai.js Merge remote-tracking branch 'origin/main' 增加星铁1.2版本图鉴数据 添加莱欧斯利、那维莱特的角色数据 Update README.md

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "author": "Lycofuture",
   "description": "Bot Plugin",
   "type": "module",
-  "dependencies": {}
+  "dependencies": {
+    "icqq": "^0.5.2",
+    "lodash": "^4.17.21"
+  }
 }
