--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,31 +1,18 @@
 on:
   push:
     branches:
-      - main
+      - master
 
-permissions:
-  contents: write
-  pull-requests: write
-
-name: release-please
+name: Release
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - uses: GoogleCloudPlatform/release-please-action@v3
+        id: release
         with:
-          token: ${{secrets.nve_TOKEN}}
+          token: ${{ secrets.nve_TOKEN }}
           release-type: node
-          #version-file: package.json
-         # command: release-please
-          #tag-separator: true
-          # group-pull-request-title-pattern: true
-          package-name: ${{ steps.package.outputs.name }}
-         # changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"chore","section":"Miscellaneous","hidden":false}]'
-      - name: Upload Release Artifact
-        if: ${{ steps.release.outputs.release_created }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.nve_TOKEN }}
-        run:
-          gh release upload ${{ steps.release.outputs.tag_name }} ./artifact/some-build-artifact.zip
+          package-name: standard-version
+          changelog-types: '[{"type": "types", "section":"Types", "hidden": false},{"type": "revert", "section":"Reverts", "hidden": false},{"type": "feat", "section": "Features", "hidden": false},{"type": "fix", "section": "Bug Fixes", "hidden": false},{"type": "improvement", "section": "Feature Improvements", "hidden": false},{"type": "docs", "section":"Docs", "hidden": false},{"type": "style", "section":"Styling", "hidden": false},{"type": "refactor", "section":"Code Refactoring", "hidden": false},{"type": "perf", "section":"Performance Improvements", "hidden": false},{"type": "test", "section":"Tests", "hidden": false},{"type": "build", "section":"Build System", "hidden": false},{"type": "ci", "section":"CI", "hidden":false}]' 
