--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,29 +1,43 @@
-name: Release
+name: .NET Core Release
+
 on:
   push:
-    branches: [ main ]
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
+
 jobs:
   build:
-    name: Release
-    runs-on: windows-latest
+
+    runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout source
+      uses: actions/checkout@v2
+      
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
-    - name: Build
-      shell: pwsh
-      run: .\build.ps1 --stable=true
-    - name: Get Release Version
-      shell: pwsh
-      run: .\build\getReleaseVersion.ps1
-    - name: Create GitHub release
-      uses: marvinpinto/action-automatic-releases@latest
+        dotnet-version: 3.1.101
+        
+    - name: Install dependencies
+      run: dotnet restore
+      
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.env_TOKEN }}
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: ${{ env.ReleaseVersion }}
-        title: ${{ env.ReleaseVersion }}
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: TODO New Release.
+        draft: false
         prerelease: false
-        files: |
-          artifacts/packages/*
+        
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.env_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
