--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -25,7 +25,7 @@ jobs:
       id: create_release
       uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.env_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.nve_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
@@ -36,6 +36,6 @@ jobs:
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.env_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.nve_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
