--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,23 +1,14 @@
-name: Release
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+name: release-please
 jobs:
-  build:
-    name: Release
-    runs-on: windows-latest
+  release-please:
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
-    - name: Create GitHub release
-      uses: marvinpinto/action-automatic-releases@latest
-      with:
-        repo_token: "${{ secrets.nve_TOKEN }}"
-        automatic_release_tag: ${{ env.ReleaseVersion }}
-        title: ${{ env.ReleaseVersion }}
-        prerelease: false
-        files: |
-          artifacts/packages/*
+      - uses: google-github-actions/release-please-action@v3
+        id: release
+        with:
+          release-type: node
+          package-name: release-please-action
