--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,4 +11,5 @@ jobs:
         id: release
         with:
           release-type: node
+          token: ${{secrets.nve_TOKEN}}
           package-name: release-please-action
