--- a/.github/workflows/releas.yml
+++ b/.github/workflows/releas.yml
@@ -1,8 +1,11 @@
+name: release
 on:
   push:
     branches:
       - main
-name: release
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   release-please:
     runs-on: ubuntu-latest
