--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -17,6 +17,9 @@ on:
     types:
       - completed
   status: {}
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   automerge:
     runs-on: ubuntu-latest
@@ -25,5 +28,5 @@ jobs:
         name: automerge
         uses: "pascalgn/automerge-action@v0.15.6"
         env:
-          GITHUB_TOKEN: "${{ secrets.nve_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: ''
