--- a/config/default_config/help.yaml
+++ b/config/default_config/help.yaml
@@ -1,6 +1,6 @@
 helpCfg:
   title: 丫丫帮助
-  subTitle: 喜欢上你，爱上你，真是太好了，谢谢。
+  subTitle: 人是万灵之长，智慧的差异是很小的，经历本身也是文化。
 helpList:
   - group: 功能列表
     list:
